perf: §10b noCOH variant — reverted per regression discipline
Tested -XX:+UseCompactObjectHeaders removal on the 6 sub-1.x
queries. Helps Q1 (+6%), Q11 (+12 pp), Q2/Q0 marginal. NO HELP
on Q12 (per-record RMW dominates). REGRESSES Q13 (0.84 -> 0.79).

Per the user's revert-on-regression discipline, noCOH does NOT
replace COH as global default. Q13's regression rules it out as
a one-flag swap. Kept as opt-in
config-forst-rs-g1-noCOH.yaml.tpl for Q11-style session-window
workloads where the +12 pp matters.

Default config-forst-rs.yaml.tpl unchanged from V1: ZGC + COH
preserved.

Across all 5 config variants tested in §10a + §10b, Q12 sits in
0.24-0.35x band. Confirmed empirically: no config knob bridges
this 3x gap. The architectural cache work (B-1 ValueStateCache +
B-4c adaptive sizing) is the only remaining lever.

Refined routing recommendation: stand up 2 TM pools
(forst-rs-zgc-pool for state-heavy windowed/iterator jobs,
forst-rs-g1-pool for everything else). Skip noCOH and local
variants unless specific job profile justifies them.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>